--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
       <form class="login">
         <input
           type="text"
-          placeholder="user"
+          placeholder="user use js or jd"
           class="login__input login__input--user"
         />
         <!-- In practice, use type="password" -->
         <input
+        
           type="text"
-          placeholder="PIN"
+          placeholder="PIN use 1111 or 2222"
           maxlength="4"
           class="login__input login__input--pin"
         />
